Add container control endpoints
- Post container action for group
- Post container action for user
- Update documentation
- Get ssh keys for user
- Get container info for user
